<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textColor="@color/md_light_blue_900"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349">

        <Spinner
            android:id="@+id/banda1_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/resistance_color"
            android:gravity="center" />

        <Spinner
            android:id="@+id/banda2_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/banda2_color"
            android:gravity="center" />

        <Spinner
            android:id="@+id/banda3_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/tolerancia_color"
            android:gravity="center" />

        <Spinner
            android:id="@+id/error_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/Tolerancia_error"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349">

        <TextView
            android:id="@+id/Banda1_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Banda1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Banda2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Banda2"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Banda3_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tolerancia"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Porcentaje"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/boton_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <TextView
        android:id="@+id/resultado_textview"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/md_light_blue_900"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_calcular"
        app:layout_constraintVertical_bias="0.181" />

</androidx.constraintlayout.widget.ConstraintLayout>